--- a/src/locales/ru.json
+++ b/src/locales/ru.json
@@ -55,7 +55,8 @@
         "transactions": "Список транзакций",
         "comming": "В разработке",
         "cardsuccess": "Теперь вы можете привязать вашу карту",
-        "snap": "Привязать карту"
+        "snap": "Привязать карту",
+        "detach": "Отвязать карту"
     },
     "transactions": {
         "title": "Переводы",
@@ -166,8 +167,8 @@
             "title": "Паспорт",
             "description": "Паспорт гражданина Китайской Народной Республики, официальный документ выдаваемый гражданам КНР, зарегистрированных как жители материкового Китая, для удостоверения их личности и для поездок за границу.",
             "form": {
-                "id-front": "Фотография лицевой стороны карты",
-                "id-back": "Обратная сторона карты",
+                "id-front": "Лицевая сторона ID-карты",
+                "id-back": "Обратная сторона ID-карты",
                 "id-selfie": "Селфи с ID-картой",
                 "signature": "Ваша подпись",
                 "details": "Пожалуйста, загрузите изображение вашего документа, удостоверяющего личность. Убедитесь, что весь документ можно увидеть, включая края и углы. Если ваше изображение не соответствует этим требованиям, ваша заявка будет отклонена.",
