--- a/src/locales/ru.json
+++ b/src/locales/ru.json
@@ -55,6 +55,7 @@
         "transactions": "Список транзакций",
         "comming": "В разработке",
         "cardsuccess": "Теперь вы можете привязать вашу карту",
+        "cardtype": "Введите номер карты в это поле",
         "snap": "Привязать карту",
         "detach": "Отвязать карту"
     },
