--- a/src/locales/zh.json
+++ b/src/locales/zh.json
@@ -55,6 +55,7 @@
         "transactions": "交易清单",
         "comming": "开发中",
         "cardsuccess": "现在可以绑定您的银行卡",
+        "cardtype": "请在此处输入卡号",
         "snap": "绑定银行卡",
         "detach": "解绑银行卡"
     },
@@ -93,10 +94,10 @@
             "description": "所有表格字段必须用英文填写。如果违反了银行的主要要求，银行有权拒绝发行银行卡。标记为可选的字段由您自行决定填写。",
             "form": {
                 "details": "身份证通常以文本，机器可读和电子形式包含有关持卡人的信息，包括其照片，姓名，个人号码，签名样本，电子芯片或磁条中记录的生物特征信息。",
-                "localname": "名字",
-                "locallastname": "姓氏",
-                "name": "名称",
-                "surname": "姓氏",
+                "localname": "名字（中文填写）",
+                "locallastname": "姓氏（中文填写）",
+                "name": "名字（用拼音填写）",
+                "surname": "姓氏（用拼音填写）",
                 "midlname": "中间名（可选）",
                 "gender": "你的性别",
                 "occupation": "工作性质",
@@ -105,7 +106,7 @@
                 "cell-code": "电话代码运营商代码",
                 "cell-number": "电话号码",
                 "postcode": "邮政编码",
-                "address": "居住地址",
+                "address": "居住地址（英文填写）",
                 "city": "城市名",
                 "country": "国别",
                 "submit": "继续"
@@ -161,8 +162,8 @@
             "title": "护照",
             "description": "中华人民共和国公民的护照，是发给在中国大陆注册的中国公民的官方文件，以验证其身份和出国旅行。",
             "form": {
-                "id-front": "卡正面的照片",
-                "id-back": "卡背面的照片",
+                "id-front": "身份证正面照片",
+                "id-back": "身份证背面照片",
                 "id-selfie": "身份证或护照的自拍照照片",
                 "signature": "在A4纸上签名的照片",
                 "details": "请上传您的身份证件图片。确保可以看到整个文档，包括边缘和角落。如果您的图像不符合这些要求，则您的申请将被拒绝。",
