locales new id-front field

--- a/src/locales/zh.json
+++ b/src/locales/zh.json
@@ -162,7 +162,7 @@
             "title": "护照",
             "description": "中华人民共和国公民的护照，是发给在中国大陆注册的中国公民的官方文件，以验证其身份和出国旅行。",
             "form": {
-                "id-front": "身份证正面照片或护照首页照片",
+                "id-front": "手持身份证拍照或手持护照拍照",
                 "id-back": "身份证背面照片(选择护照时此处跳过)",
                 "id-selfie": "手持身份证或护照照片",
                 "signature": "在A4纸上签名的照片",
