--- a/src/locales/zh.json
+++ b/src/locales/zh.json
@@ -162,9 +162,9 @@
             "title": "护照",
             "description": "中华人民共和国公民的护照，是发给在中国大陆注册的中国公民的官方文件，以验证其身份和出国旅行。",
             "form": {
-                "id-front": "手持身份证拍照或手持护照拍照",
+                "id-front": "身份证正面照片",
                 "id-back": "身份证背面照片(选择护照时此处跳过)",
-                "id-selfie": "手持身份证或护照照片",
+                "id-selfie": "手持身份证拍照或手持护照拍照",
                 "signature": "在A4纸上签名的照片",
                 "details": "请上传您的身份证件图片。确保可以看到整个文档，包括边缘和角落。如果您的图像不符合这些要求，则您的申请将被拒绝。",
                 "pid-number": "身份证号码或护照号码",
