--- a/src/locales/ru.json
+++ b/src/locales/ru.json
@@ -81,6 +81,7 @@
                 "t4": "а также в любых других целях, прямо или косвенно связанных с выпуском и обслуживанием банковских карт и предложением иных продуктов Банка, и направления мне информации о новых продуктах и услугах Банка и/или его контрагентов."
             },
             "confirm": "Согласен с условиями",
+            "link": "Инструкция KYC",
             "form": {
                 "submit": "Продолжить"
             }
