--- a/src/locales/zh.json
+++ b/src/locales/zh.json
@@ -81,6 +81,7 @@
                 "t4": "以及直接或间接与发行银行卡服务的银行，有权利向我提供关于世界银行和(或)其合作机构的新产品和服务的信息。"
             },
             "confirm": "同意这些条款",
+            "link": "图解指示 KYC",
             "form": {
                 "submit": "继续"
             }
