--- a/src/locales/ru.json
+++ b/src/locales/ru.json
@@ -95,7 +95,7 @@
             "description": "Все поля формы должны быть заполнены на английском языке. Банк в праве отказать в выпуске пластиковой карты, если основное требование банка будет нарушено. Поля отмеченные как необязательное, заполнять на свое усмотрение.",
             "form": {
                 "details": "ID-карта обычно содержит информацию о держателе карты в текстовом, машиносчитываемом и электронном видах, включая его фотографию, имя, личный номер, образец подписи, биометрическую информацию, записанные в электронном чипе или на магнитной полосе",
-                "localname": "Ваше имя (На родном языке)",
+                "localname": "Иностранное имя (На родном языке)",
                 "locallastname": "Ваше фамилия (На родном языке)",
                 "name": "Ваше имя",
                 "surname": "Фамилия",
