--- a/src/locales/zh.json
+++ b/src/locales/zh.json
@@ -95,7 +95,7 @@
             "description": "所有表格字段必须用英文填写。如果违反了银行的主要要求，银行有权拒绝发行银行卡。标记为可选的字段由您自行决定填写。",
             "form": {
                 "details": "身份证通常以文本，机器可读和电子形式包含有关持卡人的信息，包括其照片，姓名，个人号码，签名样本，电子芯片或磁条中记录的生物特征信息。",
-                "localname": "名字（中文填写）",
+                "localname": "外国名字（中文填写）",
                 "locallastname": "姓氏（中文填写）",
                 "name": "名字（用拼音填写）",
                 "surname": "姓氏（用拼音填写）",
