--- a/src/locales/ru.json
+++ b/src/locales/ru.json
@@ -89,7 +89,7 @@
         "personalinfo": "Персональная информация",
         "contactinfo": "Контактная информация",
         "addressinfo": "Адрес регистрации",
-        "idinfo": "ID Карта / Пасспорт",
+        "idinfo": "ID Карта",
         "information": {
             "title": "Основная информация",
             "description": "Все поля формы должны быть заполнены на английском языке. Банк в праве отказать в выпуске пластиковой карты, если основное требование банка будет нарушено. Поля отмеченные как необязательное, заполнять на свое усмотрение.",
