--- a/src/locales/zh.json
+++ b/src/locales/zh.json
@@ -89,13 +89,13 @@
         "personalinfo": "个人资料",
         "contactinfo": "联络资料",
         "addressinfo": "报名地址",
-        "idinfo": "身份证/护照",
+        "idinfo": "身份证",
         "information": {
             "title": "基本信息",
             "description": "所有表格字段必须用英文填写。如果违反了银行的主要要求，银行有权拒绝发行银行卡。标记为可选的字段由您自行决定填写。",
             "form": {
                 "details": "身份证通常以文本，机器可读和电子形式包含有关持卡人的信息，包括其照片，姓名，个人号码，签名样本，电子芯片或磁条中记录的生物特征信息。",
-                "localname": "外国名字（中文填写）",
+                "localname": "用中文填写姓名",
                 "locallastname": "姓氏（中文填写）",
                 "name": "名字（用拼音填写）",
                 "surname": "姓氏（用拼音填写）",
@@ -163,12 +163,12 @@
             "title": "护照",
             "description": "中华人民共和国公民的护照，是发给在中国大陆注册的中国公民的官方文件，以验证其身份和出国旅行。",
             "form": {
-                "id-front": "身份证正面照片",
-                "id-back": "身份证背面照片(选择护照时此处跳过)",
-                "id-selfie": "手持身份证拍照或手持护照拍照",
-                "signature": "在A4纸上签名的照片",
+                "id-front": "身份证正面",
+                "id-back": "身份证背面",
+                "id-selfie": "手持身份证照片",
+                "signature": "您的签名",
                 "details": "请上传您的身份证件图片。确保可以看到整个文档，包括边缘和角落。如果您的图像不符合这些要求，则您的申请将被拒绝。",
-                "pid-number": "身份证号码或护照号码",
+                "pid-number": "身份证号码",
                 "poa-number": "护照号码（可选）",
                 "back": "回去",
                 "submit": "提交"
