--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -8,6 +8,10 @@
                     "link": "account"
                 },
                 {
+                    "title": "Wallet",
+                    "link": "wallets"
+                },
+                {
                     "title": "KYC",
                     "link": "profile"
                 },
