--- a/src/locales/ru.json
+++ b/src/locales/ru.json
@@ -175,6 +175,10 @@
                     "key": "IDN"
                 },
                 {
+                    "name": "Кипр",
+                    "key": "CYP"
+                },
+                {
                     "name": "Китай",
                     "key": "CHN"
                 },
@@ -202,6 +206,10 @@
                 {
                     "name": "Индонезия",
                     "key": "IDN"
+                },
+                {
+                    "name": "Кипр",
+                    "key": "CYP"
                 },
                 {
                     "name": "Китай",
