--- a/src/locales/zh.json
+++ b/src/locales/zh.json
@@ -175,6 +175,10 @@
                     "key": "IDN"
                 },
                 {
+                    "name": "塞浦路斯",
+                    "key": "CYP"
+                },
+                {
                     "name": "中国",
                     "key": "CHN"
                 },
@@ -202,6 +206,10 @@
                 {
                     "name": "印度尼西亚",
                     "key": "IDN"
+                },
+                {
+                    "name": "塞浦路斯",
+                    "key": "CYP"
                 },
                 {
                     "name": "中国",
