--- a/src/locales/ru.json
+++ b/src/locales/ru.json
@@ -76,6 +76,15 @@
             "more": "Подробный список",
             "empty": "Список транзакций пуст"
         },
+        "transfer": {
+            "title": "Перевод с карты",
+            "subtitle": "На данный момент вы можете переводить средства с вашей карты на карту клиента этого банка, достаточно указать его номер карты и сумму перевода.",
+            "details": "Введите номер пластиковой карты получателя и сумму перевода. Убедитесь что номер карты указан верно.",
+            "cardnumber": "Номер вашей карты",
+            "amount": "Сумма перевода",
+            "submit": "Перевести",
+            "link": "Перевод с карты"
+        },
         "limit": {
             "title": "Лимит хранения",
             "subtitle": "Доступный лимит - это сумма сбережений, которую вы можете безопасно хранить и использовать в своей учетной записи.",
@@ -362,6 +371,7 @@
         "taken": "Проверьте введенные данные, все поля должны быть заполнены. Если вы забыли пароль, воспользуйтесь страницей восстановления пароля.",
         "empty": "Проверьте введенные данные, все поля должны быть заполнены.",
         "exist": "Карта уже привязана или номер карты введен некорректно.",
+        "transfererr": "Перевод отклонен. Возможно, карта не из нашей системы или у вас не пройдена KYC-верификация.",
         "500": "Наш сервис временно недоступен. Пожалуйста, попробуйте позже."
     },
     "success": {
