--- a/src/locales/zh.json
+++ b/src/locales/zh.json
@@ -76,6 +76,15 @@
             "more": "详细清单",
             "empty": "交易列表空白"
         },
+        "transfer": {
+            "title": "Перевод с карты",
+            "subtitle": "На данный момент вы можете переводить средства с вашей карты на карту клиента этого банка, достаточно указать его номер карты и сумму перевода.",
+            "details": "Введите номер пластиковой карты получателя и сумму перевода. Убедитесь что номер карты указан верно.",
+            "cardnumber": "Номер вашей карты",
+            "amount": "Сумма перевода",
+            "submit": "Перевести",
+            "link": "Перевод с карты"
+        },
         "limit": {
             "title": "存储限额",
             "subtitle": "可用的限额是您可以安全地存储和在您的帐户中使用的储蓄金额。",
@@ -362,6 +371,7 @@
         "taken": "检查输入的数据，必须填写所有字段。 如果您忘记了密码，请使用密码恢复页面。",
         "empty": "检查输入的数据，必须填写所有字段。",
         "exist": "已经绑卡或卡号输入错误。",
+        "transfererr": "Перевод отклонен. Возможно, карта не из нашей системы или у вас не пройдена KYC-верификация.",
         "500": "服务器暂时无法连接，请稍后再试。"
     },
     "success": {
