--- a/src/locales/zh.json
+++ b/src/locales/zh.json
@@ -176,6 +176,10 @@
                     "key": "null"
                 },
                 {
+                    "name": "德国",
+                    "key": "DEU"
+                },
+                {
                     "name": "香港",
                     "key": "HKG"
                 },
@@ -194,6 +198,10 @@
                 {
                     "name": "马来西亚",
                     "key": "MYS"
+                },
+                {
+                    "name": "俄罗斯",
+                    "key": "RUS"
                 },
                 {
                     "name": "新加坡",
@@ -209,6 +217,10 @@
                     "key": "null"
                 },
                 {
+                    "name": "德国",
+                    "key": "DEU"
+                },
+                {
                     "name": "香港",
                     "key": "HKG"
                 },
@@ -227,6 +239,10 @@
                 {
                     "name": "马来西亚",
                     "key": "MYS"
+                },
+                {
+                    "name": "俄罗斯",
+                    "key": "RUS"
                 },
                 {
                     "name": "俄罗斯",
