--- a/src/locales/ru.json
+++ b/src/locales/ru.json
@@ -125,7 +125,7 @@
             "secondary": "Дополнительная информация",
             "contacts": "Контактная информация",
             "address": "Адрес регистрации",
-            "card": "ID Карта",
+            "card": "ID Карта (Паспорт)",
             "documents": "Документы",
             "sign": "Подпись",
             "submit": "Подтвердить"
@@ -158,10 +158,10 @@
         "city": "Город",
         "address": "Адрес",
         "postalcode": "Индекс",
-        "doc_pid_number": "Номер ID-карты",
+        "doc_pid_number": "Номер ID-карты (Паспорта)",
         "doc_pid_image": "Лицевая сторона ID-карты",
         "doc_pidback_image": "Обратная сторона ID-карты",
-        "doc_poa_image": "Лицевая сторона паспорта",
+        "doc_poa_image": "Лицевая сторона паспорта (Селфи с лицевой стороной паспорта)",
         "doc_sign_image": "Ваша подпись",
         "password": "Пароль",
         "password_confirmation": "Подтвердите пароль",
@@ -174,6 +174,10 @@
                 {
                     "name": "Выберете из списка",
                     "key": "null"
+                },
+                {
+                    "name": "Германия",
+                    "key": "DEU"
                 },
                 {
                     "name": "Гонконг",
@@ -196,6 +200,10 @@
                     "key": "MYS"
                 },
                 {
+                    "name": "Российская Федерация",
+                    "key": "RUS"
+                },
+                {
                     "name": "Сингапур",
                     "key": "SGP"
                 }
@@ -207,6 +215,10 @@
                 {
                     "name": "Выберете из списка",
                     "key": "null"
+                },
+                {
+                    "name": "Германия",
+                    "key": "DEU"
                 },
                 {
                     "name": "Гонконг",
