--- a/src/locales/ru.json
+++ b/src/locales/ru.json
@@ -80,10 +80,12 @@
             "title": "Перевод с карты",
             "subtitle": "На данный момент вы можете переводить средства с вашей карты на карту клиента этого банка, достаточно указать его номер карты и сумму перевода.",
             "details": "Введите номер пластиковой карты получателя и сумму перевода. Убедитесь что номер карты указан верно.",
-            "cardnumber": "Номер вашей карты",
+            "cardnumber": "Номер карты",
             "amount": "Сумма перевода",
             "submit": "Перевести",
-            "link": "Перевод с карты"
+            "link": "Перевод с карты",
+            "success": "Перевод выполнен",
+            "message": "Средства будут зачислены на карту получателя в течении нескольких минут."
         },
         "limit": {
             "title": "Лимит хранения",
