--- a/src/locales/zh.json
+++ b/src/locales/zh.json
@@ -77,13 +77,15 @@
             "empty": "交易列表空白"
         },
         "transfer": {
-            "title": "Перевод с карты",
-            "subtitle": "На данный момент вы можете переводить средства с вашей карты на карту клиента этого банка, достаточно указать его номер карты и сумму перевода.",
-            "details": "Введите номер пластиковой карты получателя и сумму перевода. Убедитесь что номер карты указан верно.",
-            "cardnumber": "Номер вашей карты",
-            "amount": "Сумма перевода",
-            "submit": "Перевести",
-            "link": "Перевод с карты"
+            "title": "银行卡转账",
+            "subtitle": "目前，您可以将资金从您的银行卡转至该银行的其他客户卡上，只需提供对方的卡号和输入转账金额即可。",
+            "details": "输入收款人的银行卡号和转账金额。 确保卡号正确。",
+            "cardnumber": "卡号",
+            "amount": " 转账金额",
+            "submit": "转账",
+            "link": "银行卡转账",
+            "success": "转账完成",
+            "message": "资金将在几分钟内存入收款人的卡中。"
         },
         "limit": {
             "title": "存储限额",
