--- a/src/locales/ru.json
+++ b/src/locales/ru.json
@@ -393,6 +393,10 @@
             "title": "Проверьте почту",
             "message": "Письмо с инструкцией по активации аккаунта будет отправлена на указанный вами адрес эл.почты."
         },
+        "kyc": {
+            "title": "Анкета успешно отправлена",
+            "message": "После проверки вашей анкеты, вам будет доступен основной функционал личного кабинета."
+        },
         "recovery": {
             "title": "Проверьте почту",
             "message": "Временный пароль будет выслан после проверки на указанный вами адрес эл.почты. <br />В целях безопасности, после входа в систему, обязательно измените временный пароль."
