--- a/src/locales/zh.json
+++ b/src/locales/zh.json
@@ -397,6 +397,10 @@
             "title": "检查邮箱",
             "message": "如何激活您的帐户将以邮件形式被发送到您指定的电子邮箱。"
         },
+        "kyc": {
+            "title": "个人资料成功提交",
+            "message": "在您的个人资料审核通过后，您可以使用个人帐户的主要功能。"
+        },
         "recovery": {
             "title": "检查邮箱",
             "message": "临时密码将在验证后发送到您指定的电子邮箱。出于安全考虑，登录后一定要更改临时密码。"
