--- a/src/locales/ru.json
+++ b/src/locales/ru.json
@@ -145,6 +145,10 @@
         "404": {
             "title": "404",
             "subtitle": "Страница, которую вы пытаетесь найти - не найдена."
+        },
+        "confirmcode": {
+            "title": "Введите код ниже",
+            "subtitle": "Письмо с инструкцией по активации аккаунта будет отправлена на указанный вами адрес эл.почты."
         }
     },
     "form": {
@@ -377,7 +381,8 @@
                     "key": "026"
                 }
             ]
-        }
+        },
+        "confirmcode": "Код подтверждения"
     },
     "error": {
         "invalid": "Сервис использует ваш адрес электронной почты в качестве логина, поэтому при входе в систему убедитесь, что вы используете правильный адрес электронной почты и пароль.",
@@ -386,7 +391,8 @@
         "empty": "Проверьте введенные данные, все поля должны быть заполнены.",
         "exist": "Карта уже привязана или номер карты введен некорректно.",
         "transfererr": "Перевод отклонен. Возможно, карта не из нашей системы или у вас не пройдена KYC-верификация.",
-        "500": "Наш сервис временно недоступен. Пожалуйста, попробуйте позже."
+        "500": "Наш сервис временно недоступен. Пожалуйста, попробуйте позже.",
+        "inccode": "Неверно указан код подтверждения"
     },
     "success": {
         "session": {
